logs/strings2pot.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/strings2pot'...
Listing './lib/python3.5/site-packages/strings2pot/extractors'...
Compiling './lib/python3.5/site-packages/strings2pot/extractors/android_test.py'...
***   File "./lib/python3.5/site-packages/strings2pot/extractors/android_test.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strings2pot/extractors/arb.py'...
***   File "./lib/python3.5/site-packages/strings2pot/extractors/arb.py", line 112
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strings2pot/extractors/arb_test.py'...
***   File "./lib/python3.5/site-packages/strings2pot/extractors/arb_test.py", line 44
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strings2pot/extractors/ios_test.py'...
***   File "./lib/python3.5/site-packages/strings2pot/extractors/ios_test.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strings2pot/strings2pot.py'...
***   File "./lib/python3.5/site-packages/strings2pot/strings2pot.py", line 86
    print "Usage:", sys.argv[0], "<STRINGS_FILE> <POT_FILE>\n"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strings2pot-0.3.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
